added mobile responsivness

--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
   "name": "portfolio",
+  "homepage": "http://pethoburr.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@emailjs/browser": "^3.11.0",
+    "@react-three/drei": "^9.74.15",
+    "@react-three/fiber": "^8.13.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.12.16",
+    "maath": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.13.0",
+    "react-scripts": "^5.0.1",
+    "react-scroll-to-top": "^3.0.0",
+    "react-tilt": "^1.0.2",
+    "react-type-animation": "^3.1.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
