--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "build": "vite build",
     "serve": "vite preview",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "vite"
   },
   "eslintConfig": {
     "extends": [
@@ -55,11 +56,13 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.1",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
     "gh-pages": "^5.0.0",
+    "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9",
-    "vite-plugin-svgr": "^3.2.0",
+    "vite": "^4.2.1",
+    "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.2.0"
   }
 }
