--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "http://pethoburr.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emailjs/browser": "^3.11.0",
@@ -24,7 +25,6 @@
     "react-vertical-timeline-component": "^3.6.0",
     "source-map-loader": "^4.0.1",
     "three": "^0.153.0",
-    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
