--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "homepage": "http://pethoburr.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emailjs/browser": "^3.11.0",
